2002-07-07  Tomohiro KUBOTA  <kubota@debian.org>

	* manpage update for -M/-3/-4 command options.

2002-07-05  MINAMI Hirokazu  <minami@chem.s.u-tokyo.ac.jp>

	* Code cleanup (xwindow/x_picture_gdk.c).
	 - results of pow() are now cached.
	 - old transparency code is dropped.

2002-07-04  MINAMI Hirokazu  <minami@chem.s.u-tokyo.ac.jp>

	* Enabled command-line option for contrast/gamma
	 when configured with gdk-pixbuf. (Thanks to IWAMOTO Toshihiro san)

2002-07-03  MINAMI Hirokazu  <minami@chem.s.u-tokyo.ac.jp>

	* Added contrast/gamma support to gdk-pixbuf module. 

2002-07-04 Araki Ken <arakiken@users.sf.net>

	* -3/--contrast,-4/--gamma options are added.
	  (Thanks to IWAMOTO Toshihiro san and Nakada Nobuyoshi san)
	* the last character of each line cannot be selected by mouse. fixed.

2002-07-03  MINAMI Hirokazu  <minami@chem.s.u-tokyo.ac.jp>

	* HOME/END key support is added.

2002-07-02  MINAMI Hirokazu  <minami@chem.s.u-tokyo.ac.jp>

	* Minor code cleanup (xwindow/x_decsp_font.c).

2002-07-01  MINAMI Hirokazu  <minami@chem.s.u-tokyo.ac.jp>

	* Background of line characters did not drawn when 
	  pseudo transparency is enabled. fixed.
	  (Thanks to Tomohiro KUBOTA san)

2002-06-30  MINAMI Hirokazu  <minami@chem.s.u-tokyo.ac.jp>

	* Optimized drawing of line chars.

2002-06-29 Araki Ken <arakiken@users.sf.net>

	* -K,--metakey=[mod1-mod5,meta,alt,super,hyper] option is added.
	  This option works the same as rxvt's -mod option.

2002-06-29 Araki Ken <arakiken@users.sf.net>

	* Background of line characters can be transparent when -Y option is specified.

2002-06-28  MINAMI Hirokazu  <minami@chem.s.u-tokyo.ac.jp>

	* XDnD sesson was not terminated properly. fixed.

2002-06-25 Araki Ken <arakiken@users.sf.net>

	* XDnD is supported. (Thanks to Minami Hirokazu san)

2002-06-23 Araki Ken <arakiken@users.sf.net>

	* the style of selecting characters in RTL lines is improved.

2002-06-19 Tomohiro KUBOTA <kubota@debian.org>
